style/nav.css
nav,
header {
  position: fixed;
  left: 0;
  width: 100%;
  display: flex;
  justify-content: space-between;
  background-color: rgb(84, 83, 83);
  color: #f5deb3;
  z-index: 1000;
}

nav {
  justify-content: flex-start;
}

.nav-left {
  position: relative;
  left: 12px;
  top: 0;
  width: 60px;
  height: 60px;
  display: flex;
  justify-content: center;
  align-items: center;

}

.logo {
  width: 40px;
  height: 40px;
}

.nav-center {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.game-goal {
display: flex;
flex-direction: column;
}
.num-picker {
  display: flex;
  margin: 0 8px;
  gap: 8px;
}

.num-picker button {
  color: #f5deb3;
  background-color: rgb(84, 83, 83);
  cursor: pointer;;
}

.nav-btns {
  width: 45%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-btn {
  width: fit-content;
  background-color: unset;
  padding: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 8px;
  border-radius: 4px;
  border-width: 1px;
  box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.5);
}

.nav-btn img {
  width: fit-content;
  height: auto;
  z-index: 1;
}

.turn {
  display: block;
  width: 32px !important;
  height: auto;
}

.turn-back {
  display: none;
  width: 32px !important;
  height: auto;
}

.nav-right {
  width: fit-content;
  margin-right: 80px;
  display: flex;
  align-items: center;
}

.game-goal {
  width: 100%;
  display: flex;
  padding: 4px 0 4px 12px;
  gap: 4px;
  align-items: center;
}

.game-goal input {
  margin: 4px;
  width: auto;
}

.lang {
  width: 32px !important;
  height: 32px !important;
}

#menu {
  position: absolute;
  width: 100px;
  margin: -100px 0 0 210px;
  padding: 20px;
  padding-top: 125px;
  background: #ededed;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  transform-origin: 100% 0%;
  transform: translate(100%, 0);
  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
}

#menuToggle {
  display: block;
  position: absolute;
  top: 20px;
  right: 230px;
  z-index: 1;
  -webkit-user-select: none;
  user-select: none;
  cursor: pointer;
}

#menuToggle span {
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;
  right: -200px;
  background: #232323;
  border-radius: 3px;
  z-index: 1;
  transform-origin: 4px 0px;
  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
}

.menuToggle ul {
  position: relative;
  left: -80px;
}


#menuToggle a {
  text-decoration: none;
  color: #232323;
  transition: color 0.3s ease;
}

#menuToggle a:hover {
  color: tomato;
}


#menuToggle span:first-child {
  transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2) {
  transform-origin: 0% 100%;
}

/* Transform span zu 'X' wenn Menü geöffnet ist */
#menuToggle.open span:first-child {
  transform: rotate(45deg) translate(-2px, -1px);
  background: #232323;
}

#menuToggle.open span:nth-last-child(3) {
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

#menuToggle.open span:nth-last-child(2) {
  transform: rotate(-45deg) translate(0, -1px);
}

#menu li {
  padding: 10px 0;
  font-size: 22px;
}

/* Menü anzeigen, wenn es die Klasse 'open' hat */
#menu.open {
  transform: none;
}


.sideInfo {
  display: flex;
  flex-direction: column;
  position: fixed;
  left: 0;
  top: 100%;
  transform: translateY(-50%) rotate(-90deg);
  transform-origin: left top;
  width: 100vh;
  z-index: 10;
}

